--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ cover/
 *.mo
 *.pot
 
+# Ignore the cloned Open-dLLM repository (external dependency)
+Open-dLLM/
+
 # Django stuff:
 *.log
 local_settings.py
